<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">SIMGAS</string>

    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>

    <!--region Common-->
    <string name="network_error">Ha ocurrido un error de conexión</string>
    <string name="ppm_value">%s ppm</string>
    <string name="empty_text">No hay datos para mostrar</string>
    <string name="close">Cerrar</string>
    <string name="range_separator" translatable="false">-</string>
    <string name="infinity" translatable="false">\u221E</string>
    <string name="alert_dialog_title">Alerta</string>
    <string name="alert_dialog_positive">@string/close</string>
    <!--region Days Ago Filters-->
    <string name="past_day">Últimas 24 horas</string>
    <string name="past_week">Última semana</string>
    <string name="past_month">Último mes</string>
    <string name="past_trimester">Último trimestre</string>
    <string name="past_semester">Último semestre</string>
    <string name="past_year">Último año</string>
    <!--endregion-->
    <!--endregion-->

    <!--region Login-->
    <string name="login_activity_username_hint">Usuario</string>
    <string name="login_activity_password_hint">Contraseña</string>
    <string name="login_activity_button_login">Iniciar Sesión</string>
    <string name="login_activity_button_register">Crear una Cuenta</string>
    <string name="login_activity_empty_fields">Introduzca sus credenciales para iniciar sesión</string>
    <string name="login_activity_user_does_not_exist">El usuario no existe</string>
    <string name="login_activity_invalid_credentials">Credenciales inválidas. Verifique la contraseña</string>
    <!--endregion-->

    <!--region Register-->
    <string name="register_activity_title">Nueva Cuenta</string>
    <string name="register_activity_username_hint">Usuario</string>
    <string name="register_activity_first_name_hint">Nombre</string>
    <string name="register_activity_last_name_hint">Apellido</string>
    <string name="register_activity_email_hint">Correo electrónico</string>
    <string name="register_activity_password_hint">Contraseña</string>
    <string name="register_activity_confirm_password_hint">Confirme su contraseña</string>
    <string name="register_activity_button_register">Crear cuenta</string>
    <string name="register_activity_empty_fields">Por favor llene todos los campos</string>
    <string name="register_activity_passwords_do_not_match">Las contraseñas no coinciden</string>
    <!--endregion-->

    <!--region Main-->
    <string name="nav_drawer_sensors">Sensores</string>
    <string name="nav_drawer_profile">Mi Perfil</string>
    <string name="nav_drawer_workshops">Mis Talleres</string>
    <string name="nav_drawer_levels">Niveles de Lectura</string>
    <string name="nav_drawer_about_us">Acerca de Nosotros</string>
    <string name="nav_drawer_logout">Cerrar sesión</string>
    <string name="main_activity_logout_confirmation_title">Cerrar sesión</string>
    <string name="main_activity_logout_confirmation_message">¿Está seguro que desea cerrar sesión?</string>
    <string name="main_activity_logout_confirmation_positive">Cerrar sesión</string>
    <string name="main_activity_logout_confirmation_negative">Cancelar</string>
    <!--endregion-->

    <!--region Sensors-->
    <string name="sensors_fragment_menu_refresh">Actualizar</string>
    <!--endregion-->

    <!--region Profile-->
    <string name="profile_fragment_username_hint">@string/register_activity_username_hint</string>
    <string name="profile_fragment_first_name_hint">@string/register_activity_first_name_hint</string>
    <string name="profile_fragment_last_name_hint">@string/register_activity_last_name_hint</string>
    <string name="profile_fragment_email_hint">@string/register_activity_email_hint</string>
    <string name="profile_fragment_button_submit">Editar Perfil</string>
    <string name="profile_fragment_empty_fields">@string/register_activity_empty_fields</string>
    <string name="profile_fragment_edit_success">Su perfil ha sido actualizado con éxito</string>
    <!--endregion-->

    <!--region SensorDetail-->
    <string name="sensor_detail_activity_description">Descripción</string>
    <string name="sensor_detail_activity_daily_average">Promedio Diario</string>
    <string name="sensor_detail_activity_view_last_readings">Ver Últimas Lecturas</string>
    <string name="sensor_detail_activity_chart_no_data">@string/empty_text</string>
    <string name="sensor_detail_activity_menu_info">Calidad de Aire</string>
    <string name="sensor_detail_activity_dialog_info_title">Calidad de Aire</string>
    <string name="sensor_detail_activity_dialog_info_header_ppm">Medida (ppm)</string>
    <string name="sensor_detail_activity_dialog_info_header_value">Valoración</string>
    <!--endregion-->

    <!--region LastReadings-->
    <string name="last_readings_activity_title">Lecturas de los últimos 7 días</string>
    <string name="last_readings_activity_empty_text">@string/empty_text</string>
    <string name="last_readings_activity_load_more">Cargar más</string>
    <!--endregion-->

    <!--region ReadingLevels-->
    <string name="reading_levels_fragment_today">Hoy</string>
    <string name="reading_levels_fragment_daily_average">Promedio Diario</string>
    <string name="reading_levels_fragment_chart_no_data">@string/empty_text</string>
    <!--endregion-->

    <!--region AboutUs-->
    <string name="about_us_fragment_creators_title">Desarrolladores</string>
    <string name="about_us_fragment_advisers_title">Asesores</string>
    <string name="about_us_fragment_project_title">Acerca del Proyecto</string>
    <string name="about_us_fragment_creators_description" translatable="false">Lucas Cabrales\nEric Pérez</string>
    <string name="about_us_fragment_advisers_description" translatable="false">María Vélez\nCristian Pinzón</string>
    <string name="about_us_fragment_project_description">
        <![CDATA[
        <p>
        En la industria de producción de utilidades, donde ciertos gases son emitidos en el proceso,
         es importante tener un sistema de monitorización de gases en funcionamiento. La necesidad
         crece si el ambiente está rodeado de personas que no tienen relación con el proceso, que
         simplemente se encuentran en el área por otros motivos y que no poseen el equipo de
         protección adecuado.
        </p>
        <p>
        En este sentido, el riesgo potencial de una filtración de altos niveles de gases tóxicos,
        inflamables o no, debe ser controlado. Lo antes mencionado es el objetivo del sistema de
        monitorización de gases.
        </p>
        <p>
        Este trabajo se titula: <b>Sistema de Monitorización de Gases Tóxicos Emitidos Durante el
         Proceso de Soldadura en el Taller del Instituto Profesional y Técnico de Veraguas</b>; se creó
         el sistema que cumple con este objetivo al emitir alertas cuando ocurran altas
         concentraciones de gases tóxicos, expedidos en diferentes actividades en el taller.
        </p>
        <p>
        El sistema consta de una placa autómata o procesador de Arduino Mega, la cual es el cerebro
         para la conexión e interacción de los sensores necesarios para la captación de información
         y para recaudar datos. Arduino es una tecnología que tiene una rápida curva de entrada con
         básicos conocimientos de programación y electrónica, que permite desarrollar proyectos en
         el ámbito de las Smart Cities, el Internet de las Cosas (IoT), dispositivos wearables,
         salud, ocio, educación y robótica. El hardware de Arduino consiste en una placa con un
         microcontrolador generalmente Atmel AVR, puertos de comunicación y puertos de
         entrada/salida.
        </p>
        <p>
        La aplicación web se desarrolló utilizando el lenguaje de programación TypeScript,
         consumiendo la base de datos del sistema (MySQL).
        </p>
        <p>
        La plataforma móvil se desarrolló para un dispositivo Android con un sistema operativo de
         Android 5.0 (Lollipop) o superior. Para ello, se usó el entorno de desarrollo nativo
         Android Studio, utilizando el lenguaje Kotlin para las clases de funcionalidad y XML para
         las vistas y otras definiciones (James Floyd Kelly, n.d.).
        </p>
        <p>
        Cuando ocurre una alta concentración de gases tóxicos, captados por los sensores del sistema
         y procesados por una implementación de la lógica difusa para la toma de decisiones, se
         muestra una alerta visual y sonora en el taller y, a la vez, se envía una notificación a
         la aplicación móvil, dando cabida a tomar medidas preventivas para cuidar la salud de todos
         los implicados.
        </p>
        Finalmente, la integración entre las plataformas: Arduino, aplicación web y Android, se
         realizó mediante una interfaz de programación de aplicaciones (API), definida como el
         conjunto de constantes, funciones y protocolos que permiten programar aplicaciones.
        ]]>
    </string>
    <!--endregion-->
</resources>