<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_drawer_sensors" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_drawer_profile" />
        <item
            android:id="@+id/nav_workshops"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/nav_drawer_workshops"
            android:visible="false" />
        <item
            android:id="@+id/nav_levels"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/nav_drawer_levels" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_drawer_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_drawer_logout" />
    </group>
</menu>